--- a/lab-08.Rmd
+++ b/lab-08.Rmd
@@ -1,9 +1,10 @@
 ---
 title: "Lab 08 - University of Edinburgh Art Collection"
-author: "Insert your name here"
-date: "Insert date here"
+author: "Holland Sun"
+date: "2026 Feb"
 output: github_document
 ---
+
 
 ## Load Packages and Data  
 
@@ -16,41 +17,108 @@ library(skimr)
 
 Now, load the dataset. If your data isn't ready yet, you can leave `eval = FALSE` for now and update it when needed.  
 
-
 ```{r load-data, message = FALSE, eval = FALSE}
 # Remove eval = FALSE or set it to TRUE once data is ready to be loaded
 uoe_art <- read_csv("data/uoe-art.csv")
 ```
+## Exercise 1-4
 
-## Exercise 9
+Foe example, If I click the link, the URL is:
+
+``` https://collections.ed.ac.uk/art/record/99422?highlight=*:*```
+
+What we scraped is:
+```./record/99422?highlight=*:*"```
+
+we need to replace the ```.``` with ``` https://collections.ed.ac.uk```
+
+All other changes are saved in ```01-scrap-page-one.R```
+
+## Exercise 5 & 6
+See ```02-scrap-page-function.R```
+```{r}
+source("scripts/02-scrape-page-function.R")
+first_url <- "https://collections.ed.ac.uk/art/search/*:*/Collection:%22edinburgh+college+of+art%7C%7C%7CEdinburgh+College+of+Art%22?offset=0"
+scrape_page(first_url)
+
+second_url <- "https://collections.ed.ac.uk/art/search/*:*/Collection:%22edinburgh+college+of+art%7C%7C%7CEdinburgh+College+of+Art%22?offset=10"
+scrape_page(second_url)
+```
+
+## Exercise 7 8 9
+
+See ```03-scrap-page-many.R```
+
+## Exercise 10
 
 Let's start working with the **title** column by separating the title and the date:  
 
 ```{r separate-title-date, error = TRUE}
+uoe_art <- read_csv("data/uoe-art.csv")
 uoe_art <- uoe_art %>%
   separate(title, into = c("title", "date"), sep = "\\(") %>%
   mutate(year = str_remove(date, "\\)") %>% as.numeric()) %>%
-  select(title, artist, year, ___)  # Fill in the missing variable!
+  select(title, artist, year, link)  # 
+```
+When running the code, 3 warnings are produced. 
+
+The first warning tells us that 58 rows had more than one ```(``` in the title, so separate() only split at the first ```( ```and discarded the extra pieces. 
+
+The second warning tells us that 599 rows had no ( at all, so the date column was filled with NA. 
+
+The third warning tells us that some values in the date column could not be converted to numbers, so ```as.numeric()``` coerced them to NA. 
+
+We are ok with these warnings because our goal is simply to capture year information where it is conveniently available. Entries that don't have a clean year in parentheses will just have NA for the year. 
+
+## Exercise 11 
+
+```{r}
+skim(uoe_art)
 ```
 
-Make sure to replace `___` with the appropriate column name.  
+Based on the `skim()` output, ```r sum(is.na(uoe_art$artist))``` pieces have missing artist information and ```r sum(is.na(uoe_art$year))``` pieces have missing year information.
+
+## Exercise 12  
+
+```{r}
+ggplot(uoe_art, aes(x = year)) +
+  geom_histogram(binwidth = 10)
+```
+
+There seems to be some(or one) outliers near 0，We can use arrange to double check
+```{r}
+uoe_art %>%
+  filter(!is.na(year)) %>%
+  arrange(year) %>%
+  head(5)
+```
+
+It turned out that there was only one outlier. in year 2.
 
 
-## Exercise 10  
+## Exercise 13  
+The outlier piece is "Death Mask (2) (1964)". The correct year is 1964. Our code failed to capture the correct year because the title contains two sets of parentheses: "Death Mask (2) (1964)". Since separate() splits at the first (, it captured "2)" instead of "1964)", so it lead to  year of 2 .
+```{r}
+uoe_art <- uoe_art %>%
+  mutate(year = if_else(year == 2, 1964, year))
+ggplot(uoe_art, aes(x = year)) +
+  geom_histogram(binwidth = 10)
+```
 
-*Write your answer here.*  
+It looks normal now.
+## Exercise 14  
+```{r}
+uoe_art %>%
+  count(artist, sort = TRUE) %>%
+  head()
+```
+The most frequently featured artist is **"Unknown"**, who must be an incredibly versatile figure. I've seen this master's name across multiple fields. The second most common is **"Emma Gillies"**, whom I was not familiar with, but after checking Wikipedia, I found that she was a Scottish ceramic artist who studied and worked at the Edinburgh College of Art, so it makes sense that the university has a large collection of her work. The third most featured artist, **"NA"** is likely a master of programming and data processing who also dabbles in art in their spare time and it is quite impressive as well. I've also come across this name in these field.
 
-Feel free to add code chunks as needed. Don't forget to label your code chunk.
+## Exercise 15 
 
-
-## Exercise 11  
-
-
-*Continue with the same structure as above.*
-
-You're doing great—keep going! Follow the same format and add your response below.  
-
-
-## Additional Exercises  
-
-Almost there! Keep building on your work and follow the same structure for any remaining exercises. Each exercise builds on the last, so take your time and make sure your code is working as expected.  
+```{r}
+childc <- uoe_art %>%
+  filter(str_detect(title, regex("child", ignore_case = TRUE))) 
+```
+ 
+The word “child” appears ```r nrow(childc)``` times in these titles.
